<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dust_for_kotlin_mvp.view.MainActivity"
    android:background="#858585"
    android:id="@+id/notification_background">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/spinnerLayout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="140dp"
                android:layout_height="25dp"
                android:entries="@array/sidos" />

            <Spinner
                android:id="@+id/spinner_sgg"
                android:layout_width="140dp"
                android:layout_height="25dp"
                android:entries="@array/temp_sgg"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/sidoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_sidoText"
                    android:textSize="18sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/sggText"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temo_sggTet"
                    android:textSize="18sp"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/goToSpinnerLayout"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:fontFamily="@font/seoul_namsan"
                    android:gravity="center"
                    android:text="@string/goSpinnerText"
                    android:textSize="16sp" />

                <ImageButton
                    android:layout_marginLeft="5dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_store_black_24dp"/>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/top"
        android:layout_above="@id/bottom"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_sentiment_neutral_black_24dp" />

        <TextView
            android:id="@+id/air_state"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:text="@string/air_state_value"
            android:fontFamily="@font/seoul_namsan"/>

        <TextView
            android:id="@+id/air_state_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:text="@string/air_state_title"
            android:fontFamily="@font/seoul_namsan"/>

        <TextView
            android:id="@+id/specific_info"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_info_val"
            android:fontFamily="@font/seoul_namsan"/>

        <TextView
            android:id="@+id/specific_info_2"
            android:layout_marginTop="7.5dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_info2_val"
            android:fontFamily="@font/seoul_namsan"/>

        <TextView
            android:id="@+id/specific_info_3"
            android:layout_marginTop="7.5dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_info3_val"
            android:fontFamily="@font/seoul_namsan"/>

        <TextView
            android:id="@+id/specific_info_4"
            android:layout_marginTop="7.5dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_info4_val"
            android:fontFamily="@font/seoul_namsan"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/go_specificActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:fontFamily="@font/seoul_namsan"
                android:gravity="center"
                android:text="@string/more_info_text"
                android:textSize="16sp" />

            <ImageButton
                android:layout_marginLeft="5dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_search_black_24dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_location"
            android:layout_marginLeft="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:fontFamily="@font/seoul_namsan"
                android:gravity="center"
                android:text="@string/find_location_text"
                android:textSize="16sp" />

            <ImageButton
                android:layout_marginLeft="5dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_my_location_black_24dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C7C7C7"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    </LinearLayout>

</RelativeLayout>